Particle texture update problem #57633

Closed
opened 2018-11-05 10:17:32 +01:00 by Thomas Winkler · 5 comments

System Information
Linux Mint 18, Nvidia GTX 1050Ti

Blender Version
blender-2.80-fe07839d01b-linux-glibc224-x86_64

Short description of error
Changes in Particle Texture do not show

Exact steps for others to reproduce the error
Change the color ramp or Cloud Size of the texture. Changes are not visible interactively. Only if the particle systems visibility is toggled twice, the changes are viewed.particle_texture.blend

**System Information** Linux Mint 18, Nvidia GTX 1050Ti **Blender Version** blender-2.80-fe07839d01b-linux-glibc224-x86_64 **Short description of error** Changes in Particle Texture do not show **Exact steps for others to reproduce the error** Change the color ramp or Cloud Size of the texture. Changes are not visible interactively. Only if the particle systems visibility is toggled twice, the changes are viewed.[particle_texture.blend](https://archive.blender.org/developer/F5383483/particle_texture.blend)
Author

Added subscriber: @nibble-arts

Added subscriber: @nibble-arts
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2018-11-05 15:11:52 +01:00
Member

Can confirm this.
This is part of #56352 I guess.

@Sergey: this is also one for you, right?

Can confirm this. This is part of #56352 I guess. @Sergey: this is also one for you, right?

This issue was referenced by c2b0d8b6d6

This issue was referenced by c2b0d8b6d6c771da70b8fd9da5ac9cc53d04184d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57633
No description provided.