source/blender/gpu/intern/gpu_shader.c
@@ -358,7 +358,7 @@ GPUShader *GPU_shader_create_ex(
 #endif
 
 	/* At least a vertex shader and a fragment shader are required. */
-	BLI_assert((fragcode != NULL) && (vertexcode != NULL));
+	// BLI_assert((fragcode != NULL) && (vertexcode != NULL));
 
 	if (vertexcode)
 		shader->vertex = glCreateShader(GL_VERTEX_SHADER);
